2002-10-04  Kenneth Rohde Christiansen  <kenneth@gnu.org>

	* lib/gtk-text-buffer-extentions.c:
	* lib/gtk-text-buffer-extentions.h:
	* pixmaps/gm-imoticon-face{1...11}.png:

	Added new smilies and cleaned up my code a bit...

2002-10-03  Damien Sandras  <dsandras@seconix.com>

	* src/connection.cpp: Do not display silence detection msg's for video.

	* src/ils.cpp: /

	* src/vfakeio.cpp: Make the Fake video device work in large size too.

	* src/vfakeio.h: /

	* src/videograbber.cpp: Reorganised code.

2002-10-03  Damien Sandras  <dsandras@seconix.com>

	* pixmaps/gnomemeeting-logo.png: Added "definitive??" slogan.
	
2002-10-03  Damien Sandras  <dsandras@seconix.com>

	* callbacks.cpp: Fixed typo. Thanks Huib Kleinhout <huib@stack.nl>
	for noticing it!
	
2002-10-03  Damien Sandras  <dsandras@seconix.com>

	* callbacks.cpp: Fixed typo in about callback, and added contributors
	who are helping on the channel. (Thanks Fabrice).
	
2002-10-02  Artur Flinta  <aflinta@at.kernel.pl>

	* configure.in: Removes warning when regenerating configure from 
	configure.in file, and also fixes summary information at the end.
	
2002-10-02  Damien Sandras  <dsandras@seconix.com>

	* src/main_window.cpp: Makes use of functions in sound_handling.h.
	
2002-10-02  Kenneth Rohde Christiansen  <kenneth@gnu.org>

        * configure.in: Added da to ALL_LINGUAS.

2002-10-01  Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp, src/ldap_window.cpp, src/ldap_window.h:
	Rows in the GtkListStore where people are not available are greyed
	out.
	
2002-10-01  Damien Sandras  <dsandras@seconix.com>

	* lib/stock-icons.c, pixmaps/Makefile.am, src/tray.cpp: Fixed wrong,
	missing, or not needed stock icons names.

2002-10-01  Damien Sandras  <dsandras@seconix.com>

	* lib/stock-icons.c: Updated stock icons.

	* pixmaps/Makefile.am: Same.

	* pixmaps/available.png, pixmaps/occupied.png, 
	pixmaps/panel-available-16.png, pixmaps/panel-busy-16.png,