@@ -1,5 +1,5 @@
 #include <gnome.h>
-#include "../pixmaps/inlines.h"
+#include "../pixmaps/inline_emoticons.h"
 
 #ifndef __GTK_TEXT_BUFFER_EXT_H
 #define __GTK_TEXT_BUFFER_EXT_H
