@@ -1,369 +1,0 @@
-/* GdkPixbuf RGBA C-Source image dump */
-
-static const guint8 inline_smiley_one[] = 
-{ ""
-  /* Pixbuf magic (0x47646b50) */
-  "GdkP"
-  /* length: header (24) + pixel_data (1024) */
-  "\0\0\4\30"
-  /* pixdata_type (0x1010002) */
-  "\1\1\0\2"
-  /* rowstride (64) */
-  "\0\0\0@"
-  /* width (16) */
-  "\0\0\0\20"
-  /* height (16) */
-  "\0\0\0\20"
-  /* pixel_data: */
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\37\0\0\0l\0\0\0\261\0\0\0\372"
-  "\0\0\0\372\0\0\0\260\0\0\0g\0\0\0\37\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\227(\40\12\377\241\204;\377\351\313d\377"
-  "\355\326\204\377\355\323|\377\347\306T\377\255\214\30\377(\36\6\377\0"
-  "\0\0\227\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\275\201i/\377"
-  "\356\327\207\377\357\332\220\377\353\317p\377\345\303J\377\346\304M\377"
-  "\351\314f\377\354\322y\377\347\307X\377vX\24\377\0\0\0\274\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\232\203l4\377\357\331\214\377\353\317n\377\350\312"
-  "_\377\347\307X\377\347\307V\377\346\305Q\377\345\302H\377\344\277?\377"
-  "\345\303J\377\346\304O\377vX\21\377\0\0\0\227\0\0\0\0\0\0\0\37/'\21\377"
-  "\355\325\202\377\354\321u\377\350\310Y\377\351\313b\377\346\311d\377"
-  "\351\313b\377\350\310Y\377\342\301O\377\345\301D\377\343\275:\377\347"
-  "\306T\377\340\266%\377&\34\3\377\0\0\0\37\0\0\0j\340\266#\377\356\327"
-  "\207\377\347\307V\377\244\217E\377NE$\377\6\5\3\377\332\320\260\377s"
-  "e2\377\6\5\2\377:3\31\377\317\307\251\377\342\2721\377\344\277=\377\214"
-  "q\23\377\0\0\0Y\0\0\0\230\354\322w\377\347\307X\377\347\307X\377\351"
-  "\314f\377\363\347\277\377\357\342\265\377\356\330\213\377\357\334\226"
-  "\377\364\350\276\377\363\343\253\377\344\277@\377\342\2721\377\344\276"
-  ";\377\255\214\30\377\0\0\0\251\33\33\32\373\354\322w\377\345\303J\377"
-  "\347\307V\377\351\313b\377\352\316m\377\353\320s\377\352\316n\377\351"
-  "\313b\377\347\307W\377\345\303L\377\344\277=\377\342\2721\377\340\266"
-  "%\377\306\240\33\377\0\0\0\373\10\10\7\373\243\222U\377\203n&\377|j+"
-  "\377}l0\377|l4\377~n7\377~m5\377}l0\377|j+\377{h$\377yd\36\377zd\30\377"
-  "\200g\22\377\221u\23\377\0\0\0\373\0\0\0\260`U.\377\320\320\320\377\313"
-  "\313\313\377\336\336\336\377\342\342\342\377\367\367\367\377\367\367"
-  "\367\377\367\367\367\377\366\366\366\377\365\365\365\377\342\342\342"
-  "\377\335\335\335\377\322\322\322\377\207r(\377\0\0\0\304\0\0\0i\216s"
-  "\27\377\350\333\255\377\352\352\352\377\354\354\354\377\373\373\373\377"
-  "\372\372\372\377\374\374\374\377\367\367\367\377\367\367\367\377\367"
-  "\367\367\377\344\344\344\377\323\323\323\377\313\303\247\377`E\10\377"
-  "\0\0\0l\0\0\0\37'\37\13\377\255\225@\377\350\321\201\377\312\312\312"
-  "\377\274\274\274\377\310\310\310\377\342\342\342\377\367\367\367\377"
-  "\337\337\337\377\312\312\312\377\254\254\254\377\326\315\256\377\342"
-  "\2721\377%\31\0\377\0\0\0&\0\0\0\0\0\0\0\235qX\34\377\263\231?\377\352"
-  "\327\224\377\355\354\351\377\370\370\370\377\371\371\371\377\372\372"
-  "\372\377\357\357\357\377\334\334\334\377\331\321\270\377\342\2721\377"
-  "W=\4\377\0\0\0\227\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\276gN\23\377\244\205"
-  "\26\377\311\245'\377\351\324\207\377\355\340\264\377\341\327\263\377"
-  "\323\310\243\377\276\256w\377\342\2721\377gJ\6\377\0\0\0\300\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\235!\30\2\377nP\14\377\342\272"
-  "1\377\342\2721\377\342\2721\377\310\244+\377\201j\33\377&\33\0\377\0"
-  "\0\0\244\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\37\0\0\0p\0\0\0\307\0\0\0\373\0\0\0\355\0\0\0\327\0\0\0\225\0\0\0"
-  "2\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"};
-
-
-/* GdkPixbuf RGBA C-Source image dump */
-
-static const guint8 inline_smiley_two[] = 
-{ ""
-  /* Pixbuf magic (0x47646b50) */
-  "GdkP"
-  /* length: header (24) + pixel_data (1024) */
-  "\0\0\4\30"
-  /* pixdata_type (0x1010002) */
-  "\1\1\0\2"
-  /* rowstride (64) */
-  "\0\0\0@"
-  /* width (16) */
-  "\0\0\0\20"
-  /* height (16) */
-  "\0\0\0\20"
-  /* pixel_data: */
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\37\0\0\0l\0\0\0\261\0\0\0\372"
-  "\0\0\0\372\0\0\0\260\0\0\0g\0\0\0\37\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\227(\40\12\377\241\204;\377\351\313d\377"
-  "\355\326\204\377\355\323|\377\347\306T\377\255\214\30\377(\36\6\377\0"
-  "\0\0\227\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\275\201i/\377"
-  "\356\327\207\377\357\332\220\377\353\317p\377\345\303J\377\346\304M\377"
-  "\351\314f\377\354\322y\377\347\307X\377vX\24\377\0\0\0\274\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\232\203l4\377\357\331\214\377\353\317n\377\350\312"
-  "_\377I?\33\377\347\307V\377\315\260H\377=3\23\377\344\277?\377\345\303"
-  "J\377\346\304O\377vX\21\377\0\0\0\227\0\0\0\0\0\0\0\37/'\21\377\355\325"
-  "\202\377\354\321u\377\350\310Y\377ND!\377\6\5\2\377gY+\377vlI\377\11"
-  "\7\3\377k].\377\356\330\213\377\347\306T\377\340\266%\377&\34\3\377\0"
-  "\0\0\37\0\0\0j\340\266#\377\356\327\207\377\347\307V\377\351\313b\377"
-  "\321\270a\377A9\37\377\366\353\304\377\360\334\226\377C:\31\377\367\355"
-  "\311\377\352\317n\377\342\2721\377\344\277=\377\214q\23\377\0\0\0Y\0"
-  "\0\0\230\354\322w\377\347\307X\377\347\307X\377\351\314f\377\360\335"
-  "\233\377\372\365\341\377\364\346\265\377\351\314f\377\366\353\306\377"
-  "\352\315j\377\344\277?\377\342\2721\377\344\276;\377\255\214\30\377\0"
-  "\0\0\251\33\33\32\373\354\322w\377\345\303J\377\347\307V\377\351\313"
-  "b\377\352\316m\377\353\320r\377\352\316m\377\351\313b\377\347\307V\377"
-  "\345\303J\377\344\277=\377\342\2721\377\340\266%\377\306\240\33\377\0"
-  "\0\0\373\10\10\7\373\354\323{\377\345\301D\377\346\305Q\377\253\224A"
-  "\377H>\36\377\21\17\7\377\1\1\0\377\1\1\0\377\21\16\6\377F;\25\377\250"
-  "\214*\377\342\271-\377\340\265!\377\272\226\31\377\0\0\0\373\0\0\0\260"
-  "\353\317p\377\344\277?\377bS\37\377\0\0\0\377&&&\377888\377333\377<<"
-  "<\377>>>\377999\377\0\0\0\377xi4\377\351\316p\377\237\201\26\377\0\0"
-  "\0\304\0\0\0i\341\267&\377\347\307V\377\0\0\0\377\0\0\0\377\33\33\33"
-  "\377\0\0\0\377\0\0\0\377III\377\0\0\0\377\0\0\0\377\0\0\0\377III\377"
-  "\341\323\243\377vU\12\377\0\0\0l\0\0\0\37.%\15\377\347\307V\377bR\32"
-  "\377\0\0\0\377\0\0\0\377\0\0\0\377\0\0\0\377\0\0\0\377\0\0\0\377\0\0"
-  "\0\377\21\21\21\377\267\260\226\377\267\246k\377'\33\1\377\0\0\0&\0\0"
-  "\0\0\0\0\0\235\201d\40\377\346\305Q\377\247\212%\377F9\17\377\20\15\3"
-  "\377\1\1\0\377\1\1\0\377\20\15\2\377YM%\377\315\301\230\377\307\263o"
-  "\377`D\5\377\0\0\0\227\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\276gN\23\377\333"
-  "\261\36\377\345\303K\377\353\320s\377\356\327\210\377\344\315\200\377"
-  "\343\320\222\377\340\320\226\377\261\231D\377gJ\6\377\0\0\0\300\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\235!\30\2\377zY\16\377\250\210"
-  "\27\377\263\220\30\377\252\211\27\377\240\204$\377ya\20\377&\33\0\377"
-  "\0\0\0\244\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\37\0\0\0p\0\0\0\307\0\0\0\373\0\0\0\355\0\0\0\327\0\0\0\225\0\0"
-  "\0""2\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"};
-
-
-/* GdkPixbuf RGBA C-Source image dump */
-
-static const guint8 inline_smiley_three[] = 
-{ ""
-  /* Pixbuf magic (0x47646b50) */
-  "GdkP"
-  /* length: header (24) + pixel_data (1024) */
-  "\0\0\4\30"
-  /* pixdata_type (0x1010002) */
-  "\1\1\0\2"
-  /* rowstride (64) */
-  "\0\0\0@"
-  /* width (16) */
-  "\0\0\0\20"
-  /* height (16) */
-  "\0\0\0\20"
-  /* pixel_data: */
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\37\0\0\0l\0\0\0\261\0\0\0\372"
-  "\0\0\0\372\0\0\0\260\0\0\0g\0\0\0\37\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\227(\40\12\377\241\204;\377\351\313d\377"
-  "\355\326\204\377\355\323|\377\347\306T\377\255\214\30\377(\36\6\377\0"
-  "\0\0\227\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\275\201i/\377"
-  "\356\327\207\377\357\332\220\377\353\317p\377\345\303J\377\346\304M\377"
-  "\351\314f\377\354\322y\377\347\307X\377vX\24\377\0\0\0\274\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\232\203l4\377\357\331\214\377\353\317n\377\350\312"
-  "_\377\347\307X\377\347\307V\377\346\305Q\377\345\302H\377\344\277?\377"
-  "\345\303J\377\346\304O\377vX\21\377\0\0\0\227\0\0\0\0\0\0\0\37/'\21\377"
-  "\355\325\202\377\354\321u\377\350\310Y\377\351\313b\377J@\40\377\351"
-  "\313b\377\317\262O\377=4\25\377\345\301D\377\343\275:\377\347\306T\377"
-  "\340\266%\377&\34\3\377\0\0\0\37\0\0\0j\340\266#\377\356\327\207\377"
-  "\347\307V\377\351\313b\377NE$\377\6\5\3\377g[0\377vmL\377\11\7\3\377"
-  "k^0\377\357\331\215\377\342\2721\377\344\277=\377\214q\23\377\0\0\0Y"
-  "\0\0\0\230\354\322w\377\347\307X\377\347\307X\377\351\314f\377\322\271"
-  "e\377A;#\377\367\354\306\377\360\335\231\377C:\31\377\367\355\311\377"
-  "\352\317o\377\342\2721\377\344\276;\377\255\214\30\377\0\0\0\251\33\33"
-  "\32\373\354\322w\377\345\303J\377\347\307V\377\351\313b\377\360\334\227"
-  "\377\372\364\336\377\364\345\262\377\351\313b\377\366\353\305\377\351"
-  "\315i\377\344\277=\377\342\2721\377\340\266%\377\306\240\33\377\0\0\0"
-  "\373\10\10\7\373\354\323{\377\277\2418\377\264\232?\377\350\310Y\377"
-  "\351\313b\377\351\314f\377\351\313b\377\350\310Y\377\346\305Q\377\345"
-  "\301D\377\343\275:\377\227|\36\377\261\217\32\377\272\226\31\377\0\0"
-  "\0\373\0\0\0\260\353\317p\377\333\267<\377\207r*\377\220{2\377\347\307"
-  "V\377\347\307X\377\347\307V\377\346\305Q\377\345\302H\377\344\277?\377"
-  "xc\33\377xb\25\377\347\310`\377\237\201\26\377\0\0\0\304\0\0\0i\341\267"
-  "&\377\347\307V\377\346\312h\377GA,\377,%\16\377\346\303K\377\345\303"
-  "J\377\326\264?\377\266\2302\3778/\15\3774*\12\377\352\315k\377\273\234"
-  "/\377vU\12\377\0\0\0l\0\0\0\37.%\15\377\347\307V\377\344\277=\377\353"
-  "\320s\377\304\266\203\377*#\13\377\17\14\4\377\6\5\1\377\25\21\4\377"
-  "\230\204=\377\352\316m\377\312\243\33\377\214q\23\377'\33\1\377\0\0\0"
-  "&\0\0\0\0\0\0\0\235\201d\40\377\346\305Q\377\342\2733\377\351\313e\377"
-  "\356\327\211\377\361\336\236\377\357\330\214\377\356\330\211\377\352"
-  "\315k\377\301\234\32\377\245\205\26\377`D\5\377\0\0\0\227\0\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\276gN\23\377\333\261\36\377\341\271,\377\342\2733"
-  "\377\340\266%\377\317\247\34\377\304\236\33\377\275\231\32\377\236\177"
-  "\25\377gJ\6\377\0\0\0\300\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\235!\30\2\377zY\16\377\250\210\27\377\263\220\30\377\252\211\27\377"
-  "\232|\25\377ya\20\377&\33\0\377\0\0\0\244\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\37\0\0\0p\0\0\0\307\0\0\0\373\0\0"
-  "\0\355\0\0\0\327\0\0\0\225\0\0\0""2\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"};
-
-
-/* GdkPixbuf RGBA C-Source image dump */
-
-static const guint8 inline_smiley_four[] = 
-{ ""
-  /* Pixbuf magic (0x47646b50) */
-  "GdkP"
-  /* length: header (24) + pixel_data (1024) */
-  "\0\0\4\30"
-  /* pixdata_type (0x1010002) */
-  "\1\1\0\2"
-  /* rowstride (64) */
-  "\0\0\0@"
-  /* width (16) */
-  "\0\0\0\20"
-  /* height (16) */
-  "\0\0\0\20"
-  /* pixel_data: */
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\37\0\0\0l\0\0\0\261\0\0\0\372"
-  "\0\0\0\372\0\0\0\260\0\0\0g\0\0\0\37\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\227(\40\12\377\241\204;\377\351\313d\377"
-  "\355\326\204\377\355\323|\377\347\306T\377\255\214\30\377(\36\6\377\0"
-  "\0\0\227\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\275\201i/\377"
-  "\356\327\207\377\357\332\220\377\353\317p\377\345\303J\377\346\304M\377"
-  "\351\314f\377\354\322y\377\347\307X\377vX\24\377\0\0\0\274\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\232\203l4\377\357\331\214\377\353\317n\377\350\312"
-  "_\377\347\307X\377\347\307V\377\346\305Q\377\345\302H\377\344\277?\377"
-  "\345\303J\377\346\304O\377vX\21\377\0\0\0\227\0\0\0\0\0\0\0\37/'\21\377"
-  "\355\325\202\377\354\321u\377\350\310Y\377\351\313b\377\337\304b\377"
-  "\351\313b\377\317\262O\377=4\25\377\345\301D\377\343\275:\377\347\306"
-  "T\377\340\266%\377&\34\3\377\0\0\0\37\0\0\0j\340\266#\377\356\327\207"
-  "\377\327\271P\377\177o5\3771+\27\377\26\25\23\377\357\340\257\377vmL"
-  "\377\11\7\3\377k^0\377\357\331\215\377\342\2721\377\344\277=\377\214"
-  "q\23\377\0\0\0Y\0\0\0\230\354\322w\377\347\307X\377\352\316m\377\363"
-  "\343\253\377\362\343\257\377\364\346\263\377\353\320r\377\360\335\231"
-  "\377C:\31\377\367\355\311\377\352\317o\377\342\2721\377\344\276;\377"
-  "\255\214\30\377\0\0\0\251\33\33\32\373\354\322w\377\345\303J\377\340"
-  "\310u\377\351\313b\377\352\316m\377\353\320r\377\352\317r\377\351\313"
-  "b\377\366\353\305\377\351\315i\377\344\277=\377\342\2721\377\340\266"
-  "%\377\306\240\33\377\0\0\0\373\10\10\7\373\354\323{\377\324\267S\377"
-  "\326\306\215\377\343\312r\377\351\313b\377\351\314f\377\351\313b\377"
-  "\350\310Y\377\346\305Q\377\345\301D\377\343\275:\377\334\264+\377\330"
-  "\257\37\377\272\226\31\377\0\0\0\373\0\0\0\260\353\317p\377\336\272="
-  "\377\225\177/\377\317\272p\377\356\331\215\377\347\307X\377\347\307V"
-  "\377\346\305Q\377\345\302H\377\344\277?\377\337\2702\377\312\245#\377"
-  "\340\2726\377\237\201\26\377\0\0\0\304\0\0\0i\341\267&\377\347\307V\377"
-  "\354\326\214\377\213v*\377\267\237F\377\357\331\217\377\354\324\177\377"
-  "\346\311d\377\342\300J\377\243\207&\3774*\12\377\355\326\205\377\273"
-  "\234/\377vU\12\377\0\0\0l\0\0\0\37.%\15\377\347\307V\377\352\316l\377"
-  "\360\334\230\377\277\251[\377\223{(\3771/)\377\6\5\1\377\25\21\4\377"
-  "\247\226Y\377\356\327\211\377\320\2554\377\214q\23\377'\33\1\377\0\0"
-  "\0&\0\0\0\0\0\0\0\235\201d\40\377\346\305Q\377\342\2733\377\357\333\224"
-  "\377\364\346\266\377\365\347\270\377\362\337\241\377\361\337\240\377"
-  "\354\323{\377\301\234\32\377\245\205\26\377`D\5\377\0\0\0\227\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\276gN\23\377\333\261\36\377\341\271,\377\342\273"
-  "3\377\340\266%\377\317\247\34\377\304\236\33\377\275\231\32\377\236\177"
-  "\25\377gJ\6\377\0\0\0\300\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\235!\30\2\377zY\16\377\250\210\27\377\263\220\30\377\252\211\27\377"
-  "\232|\25\377ya\20\377&\33\0\377\0\0\0\244\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\37\0\0\0p\0\0\0\307\0\0\0\373\0\0"
-  "\0\355\0\0\0\327\0\0\0\225\0\0\0""2\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"};
-
-
-/* GdkPixbuf RGBA C-Source image dump */
-
-static const guint8 inline_smiley_five[] = 
-{ ""
-  /* Pixbuf magic (0x47646b50) */
-  "GdkP"
-  /* length: header (24) + pixel_data (1024) */
-  "\0\0\4\30"
-  /* pixdata_type (0x1010002) */
-  "\1\1\0\2"
-  /* rowstride (64) */
-  "\0\0\0@"
-  /* width (16) */
-  "\0\0\0\20"
-  /* height (16) */
-  "\0\0\0\20"
-  /* pixel_data: */
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\37\0\0\0l\0\0\0\261\0\0\0\372"
-  "\0\0\0\372\0\0\0\260\0\0\0g\0\0\0\37\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\227(\40\12\377\241\204;\377\351\313d\377"
-  "\355\326\204\377\355\323|\377\347\306T\377\255\214\30\377(\36\6\377\0"
-  "\0\0\227\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\275\201i/\377"
-  "\356\327\207\377\357\332\220\377\353\317p\377\345\303J\377\346\304M\377"
-  "\351\314f\377\354\322y\377\347\307X\377vX\24\377\0\0\0\274\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\232\203l4\377\357\331\214\377\353\317n\377uf0\377"
-  "7/\25\377\360\335\230\377\346\305Q\377.'\16\377s`\37\377\357\332\221"
-  "\377\346\304O\377vX\21\377\0\0\0\227\0\0\0\0\0\0\0\37/'\21\377\355\325"
-  "\202\377\354\321u\377\350\310Y\377.(\23\3770*\25\377\363\344\256\377"
-  "\350\310Y\377-&\17\377,%\15\377\363\343\255\377\347\306T\377\340\266"
-  "%\377&\34\3\377\0\0\0\37\0\0\0j\340\266#\377\356\327\207\377\347\307"
-  "V\377\351\313b\377.)\25\377/)\26\377\364\346\266\377\351\313b\377.'\21"
-  "\377,&\16\377\365\347\267\377\342\2721\377\344\277=\377\214q\23\377\0"
-  "\0\0Y\0\0\0\230\354\322w\377\347\307X\377\347\307X\377\351\314f\377/"
-  ")\26\377/*\31\377\364\346\266\377\351\314f\377-'\21\377.'\17\377\365"
-  "\347\270\377\342\2721\377\344\276;\377\255\214\30\377\0\0\0\251\33\33"
-  "\32\373\354\322w\377\345\303J\377\347\307V\377\351\313b\377.)\25\377"
-  "1,\30\377\364\346\266\377\351\313b\37780\24\3770)\17\377\364\346\265"
-  "\377\342\2721\377\340\266%\377\306\240\33\377\0\0\0\373\10\10\7\373\354"
-  "\323{\377\277\2418\377\264\232?\377\350\310Y\377\363\342\252\377\364"
-  "\346\266\377\353\321t\377\350\310Y\377\362\342\250\377\364\346\264\377"
-  "\350\311`\377\227|\36\377\261\217\32\377\272\226\31\377\0\0\0\373\0\0"
-  "\0\260\353\317p\377\333\267<\377\207r*\377\220{2\377\347\307V\377\347"
-  "\307X\377\347\307V\377\346\305Q\377\345\302H\377\344\277?\377xc\33\377"
-  "xb\25\377\347\310`\377\237\201\26\377\0\0\0\304\0\0\0i\341\267&\377\347"
-  "\307V\377\346\312h\377GA,\377,%\16\377\346\303K\377\345\303J\377\326"
-  "\264?\377\266\2302\3778/\15\3774*\12\377\352\315k\377\273\234/\377vU"
-  "\12\377\0\0\0l\0\0\0\37.%\15\377\347\307V\377\344\277=\377\353\320s\377"
-  "\304\266\203\377*#\13\377\17\14\4\377\6\5\1\377\25\21\4\377\230\204="
-  "\377\352\316m\377\312\243\33\377\214q\23\377'\33\1\377\0\0\0&\0\0\0\0"
-  "\0\0\0\235\201d\40\377\346\305Q\377\342\2733\377\351\313e\377\356\327"
-  "\211\377\361\336\236\377\357\330\214\377\356\330\211\377\352\315k\377"
-  "\301\234\32\377\245\205\26\377`D\5\377\0\0\0\227\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\0\0\0\276gN\23\377\333\261\36\377\341\271,\377\342\2733\377\340"
-  "\266%\377\317\247\34\377\304\236\33\377\275\231\32\377\236\177\25\377"
-  "gJ\6\377\0\0\0\300\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\235"
-  "!\30\2\377zY\16\377\250\210\27\377\263\220\30\377\252\211\27\377\232"
-  "|\25\377ya\20\377&\33\0\377\0\0\0\244\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\37\0\0\0p\0\0\0\307\0\0\0\373\0\0\0\355"
-  "\0\0\0\327\0\0\0\225\0\0\0""2\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"};
-
-
-/* GdkPixbuf RGBA C-Source image dump */
-
-static const guint8 inline_smiley_six[] = 
-{ ""
-  /* Pixbuf magic (0x47646b50) */
-  "GdkP"
-  /* length: header (24) + pixel_data (1024) */
-  "\0\0\4\30"
-  /* pixdata_type (0x1010002) */
-  "\1\1\0\2"
-  /* rowstride (64) */
-  "\0\0\0@"
-  /* width (16) */
-  "\0\0\0\20"
-  /* height (16) */
-  "\0\0\0\20"
-  /* pixel_data: */
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\37\0\0\0l\0\0\0\261\0\0\0\372"
-  "\0\0\0\372\0\0\0\260\0\0\0g\0\0\0\37\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\227(\40\12\377\241\204;\377\351\313d\377"
-  "\355\326\204\377\355\323|\377\347\306T\377\255\214\30\377(\36\6\377\0"
-  "\0\0\227\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\275\201i/\377"
-  "\356\327\207\377\357\332\220\377\353\317p\377\345\303J\377\346\304M\377"
-  "\351\314f\377\354\322y\377\347\307X\377vX\24\377\0\0\0\274\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\232\203l4\377\357\331\214\377\353\317n\377\350\312"
-  "_\377\347\307X\377\347\307V\377\346\305Q\377\345\302H\377\344\277?\377"
-  "\345\303J\377\346\304O\377vX\21\377\0\0\0\227\0\0\0\0\0\0\0\37/'\21\377"
-  "\355\325\202\377\354\321u\377\350\310Y\377\351\313b\377J@\40\377\351"
-  "\313b\377\317\262O\377=4\25\377\345\301D\377\343\275:\377\347\306T\377"
-  "\340\266%\377&\34\3\377\0\0\0\37\0\0\0j\340\266#\377\356\327\207\377"
-  "\347\307V\377\351\313b\377NE$\377\6\5\3\377g[0\377vmL\377\11\7\3\377"
-  "k^0\377\357\331\215\377\342\2721\377\344\277=\377\214q\23\377\0\0\0Y"
-  "\0\0\0\230\354\322w\377\347\307X\377\347\307X\377\351\314f\377\322\271"
-  "e\377A;#\377\367\354\306\377\360\335\231\377C:\31\377\367\355\311\377"
-  "\352\317o\377\342\2721\377\344\276;\377\255\214\30\377\0\0\0\251\33\33"
-  "\32\373\354\322w\377\345\303J\377\347\307V\377\351\313b\377\360\334\227"
-  "\377\372\364\336\377\364\345\262\377\351\313b\377\366\353\305\377\351"
-  "\315i\377\344\277=\377\342\2721\377\340\266%\377\306\240\33\377\0\0\0"
-  "\373\10\10\7\373\354\323{\377\345\301D\377\346\305Q\377\350\310Y\377"
-  "\351\313b\377\351\314f\377\351\313b\377\350\310Y\377\346\305Q\377\345"
-  "\301D\377\343\275:\377\342\271-\377\340\265!\377\272\226\31\377\0\0\0"
-  "\373\0\0\0\260\353\317p\377\344\277?\377\345\302H\377\346\305Q\377\347"
-  "\307V\377\347\307X\377\347\307V\377\346\305Q\377\345\302H\377\344\277"
-  "?\377\342\2733\377\341\270(\377\335\262\36\377\237\201\26\377\0\0\0\304"
-  "\0\0\0i\341\267&\377\347\307V\377\344\277?\377\345\301D\377\251\2206"
-  "\3773+\20\377\36\32\11\377#\35\12\3773+\16\377\216u!\377\341\271,\377"
-  "\340\265!\377\264\222\31\377vU\12\377\0\0\0l\0\0\0\37.%\15\377\347\307"
-  "V\377\330\2659\377\201l!\377WI\27\377\256\235b\377\361\336\233\377\361"
-  "\340\243\377\320\274w\377dR\23\377\224\202A\377\312\243\33\377\214q\23"
-  "\377'\33\1\377\0\0\0&\0\0\0\0\0\0\0\235\201d\40\377\346\305Q\377\326"
-  "\2610\377\342\2721\377\342\2721\377\342\2721\377\342\271-\377\344\300"
-  "A\377\355\325\202\377\317\267e\377\245\205\26\377`D\5\377\0\0\0\227\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\276gN\23\377\333\261\36\377\341\271,\377"
-  "\342\2733\377\340\266%\377\317\247\34\377\304\236\33\377\275\231\32\377"
-  "\236\177\25\377gJ\6\377\0\0\0\300\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\0\0\0\235!\30\2\377zY\16\377\250\210\27\377\263\220\30\377\252\211"
-  "\27\377\232|\25\377ya\20\377&\33\0\377\0\0\0\244\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\0\37\0\0\0p\0\0\0\307\0\0\0"
-  "\373\0\0\0\355\0\0\0\327\0\0\0\225\0\0\0""2\0\0\0\0\0\0\0\0\0\0\0\0\0"
-  "\0\0\0"};
-
-
