@@ -1,3 +1,13 @@
+2002-10-04 Damien Sandras  <dsandras@seconix.com>
+	
+	* lib/gtk-text-buffer-extentions.h: Make use of new generated file.
+
+	* pixmaps/Makefile.am: Generated file inline_emoticons.h.
+
+	* pixmaps/inline_emoticons.h: Removed (autogenerated).
+
+	* src/main_window.cpp: Fixed startup bug with esd.
+	
 2002-10-04  Kenneth Rohde Christiansen  <kenneth@gnu.org>
 
 	* lib/gtk-text-buffer-extentions.c:
